Fixing bug with mint not showing if there's a mint key

--- a/src/web/html/css/app.css
+++ b/src/web/html/css/app.css
@@ -2442,3 +2442,8 @@ td.action, th.action {
   margin-right: 10px;
   font-size: 14px;
 }
+
+
+.mint-help {
+  font-size: .65em;
+}
